#141 Fix 'New message' divider spacing

--- a/src/components/primary/chat/_chat.scss
+++ b/src/components/primary/chat/_chat.scss
@@ -64,8 +64,7 @@
             }
         }
         &.beforeGroup-1rH1F0{
-            margin-bottom: -10px;
-            margin-top: 0.5rem;
+            margin-bottom: calc(0.53125rem - .5rem - 2px);
         }
         span{
             padding: 2px 8px;
